fix: header on mobile

--- a/nextjs/apps/customers/src/components/layout/app-footer.module.scss
+++ b/nextjs/apps/customers/src/components/layout/app-footer.module.scss
@@ -1,8 +1,8 @@
 .footer {
   margin-top: rem(120px);
   background-color: light-dark(
-    var(--mantine-color-gray-0),
-    var(--mantine-color-dark-6)
+    var(--mantine-color-neutral-3),
+    var(--mantine-color-neutral-7)
   );
   border-top: rem(1px) solid
     light-dark(var(--mantine-color-gray-2), var(--mantine-color-dark-5));
